# audibook-studio

./: .env  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  BUILD_AND_RUN.md  Dockerfile  ENVIRONMENT_VARIABLES.md  IMPORT_ANALYSIS_AND_E2E_TESTING.md  NATS_MIGRATION_CHECKLIST.md  NATS_WORKERS_COMPLETE.md  PRE_COMMIT_SETUP.md  debug-bulk-fixes.js  debug-db.js  debug-diff.js  debug-disambiguation.js  debug-fix-types.js  docker-compose.nats.yml  docker-compose.override.yml  docker-compose.yml  epub-page-splitter.ts  hebrew-tts-splitter.ts  hebrew_ai_narration_text_correction_manual.md  nest-cli.json  nx.json  openapi-config.yaml  package.json  phonikud-1.0.int8.onnx  pnpm-lock.yaml  pnpm-workspace.yaml  setup-pre-commit.sh  test-epub-parser.js  test-loki-auth.js  test-loki-local.js  test-nats-integration.js  test_book.epub  tsconfig.base.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: BOOK_MERGE_GUIDE.md  Dockerfile  jest.config.ts  project.json  start.sh  tsconfig.app.json  webpack.config.js
apps/python-worker/: .dockerignore  .env.example  .flake8  Dockerfile  Dockerfile.test  README.md  bullmq_worker.py  health_check.py  logging_config.py  main.py  models.py  nats_worker.py  project.json  pyproject.toml  requirements-dev.txt  requirements.txt  run-worker.sh  setup-dev.sh  test_database_schema_fix.py  test_job_processor_metadata_bug.py  test_nats_worker.py  test_python_worker.py  test_sqlalchemy_migration.py  worker.py
apps/python-worker/models/: dicta-1.0.int8.onnx  phonikud-1.0.onnx
apps/python-worker/services/: __init__.py  database.py  database_orm.py  diacritics.py  job_processor.py
apps/web/: Dockerfile  eslint.config.mjs  next.config.js  package.json  project.json  railway.toml  server.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
apps/workers/: Dockerfile  jest.config.ts  project.json
docs/: README.md  metrics-implementation-plan.md  testing-strategy-regression-prevention.md
docs/architecture/: export-system-design.md
docs/deployment/: ffmpeg-requirements.md  (+1 more)
scripts/: README-audio-timestamps.md  backfill-audio-timestamps.ts  debug_queue.sh  nats-dev.sh  reset.sh  rollback-migration.sh  safety-check.sh
test-artifacts/: test_book.epub
(+390 files in other folders)
